@@ -1,3 +1,8 @@
+2006-02-11  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-toc-pager.c: (process_info_pending):
+	Committed a patch from Robert Harris to fix a crash.
+
 2006-02-04  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-window.c: (pager_page_cb):
